audio player, profile photo, card info and styles

--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -28,5 +28,13 @@
         align-items: center;
         justify-content: space-between;
         border-bottom: 2px solid black;
+
+        & p{
+            width: 170px;
+        }
+
+        &-date {
+            text-align: end;
+          }
     }
 }
