--- a/src/assets/css/components/_previousWork.scss
+++ b/src/assets/css/components/_previousWork.scss
@@ -58,7 +58,7 @@ $orange: hsl(50, 80%, 50%);
     color: inherit;
     cursor: pointer;
     width: calc(25% - 2rem);
-    min-width: 250px;
+    min-width: 320px;
     height: 400px;
     min-height: 450px;
     perspective: 1000px;
@@ -96,7 +96,10 @@ $orange: hsl(50, 80%, 50%);
     color: #fff;
     overflow: hidden;
     display: flex;
+    // flex-direction: column;
     align-items: flex-end;
+    filter: sepia(.5);
+    
 
     &:before {
         position: absolute;
@@ -107,7 +110,7 @@ $orange: hsl(50, 80%, 50%);
         right: 0;
         bottom: 0;
         background: linear-gradient(135deg, adjust-hue($primary, -20deg), $primary);
-        opacity: .25;
+        opacity: .35;
         z-index: -1;
     }
 
@@ -124,8 +127,12 @@ $orange: hsl(50, 80%, 50%);
     background: #fff;
     transform: rotateY(-180deg);
     padding: 0 2em;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    filter: sepia(.5);
 
     .button {
         background: linear-gradient(135deg, adjust-hue($primary, -20deg), $primary);
@@ -155,5 +162,13 @@ $orange: hsl(50, 80%, 50%);
 
     .card:nth-child(even):hover & {
         transform: rotateY(0deg);
+    }
+
+    a {
+        margin: 20px;
+        background: black;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
     }
 }
