--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -19,3 +19,5 @@ h1, h2, h3, h4, h5, h6 {
 @import "components/intro";
 @import "components/previousWork";
 @import "components/wheretofind";
+@import "components/audioplayer";
+@import "components/stamps";
