--- a/src/assets/css/components/_backgroundGrain.scss
+++ b/src/assets/css/components/_backgroundGrain.scss
@@ -14,33 +14,33 @@
 	background: none;
 	background-size: cover;
     filter: sepia(0.75);
-}
 
-.content:after {
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-	box-shadow: 0 0 20vmin 0vmin var(--black) inset, 0 0 3vmin 0.5vmin var(--black) inset, 0 0 1vmin 1vmin var(--black);
+	&:after {
+		position: absolute;
+		content: "";
+		width: 100%;
+		height: 100%;
+		box-shadow: 0 0 20vmin 0vmin var(--black) inset, 0 0 3vmin 0.5vmin var(--black) inset, 0 0 1vmin 1vmin var(--black);
+	}
 }
 
 .film, .effect {
-	width: 100%;
+	width: 100vw;
 	height: 100%;
 	filter: blur(0.45px) drop-shadow(0px 0px 0px #fff1);
-}
 
-.film:after, .effect:after {
-	position: absolute;
-	content: '';
-	width: 120%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	padding-left: 100px;
-	opacity: 0.5;
-	animation: film-scratch 0.45s steps(1) infinite;
-	background: repeating-linear-gradient(90deg, #0002 0 2px, transparent 4px 37vmin);
+	&:after {
+		position: absolute;
+		content: '';
+		width: 100vw;
+		height: 100%;
+		top: 0;
+		left: 0;
+		padding-left: 100px;
+		opacity: 0.5;
+		animation: film-scratch 0.45s steps(1) infinite;
+		background: repeating-linear-gradient(90deg, #0002 0 2px, transparent 4px 37vmin);
+	}
 }
 
 .effect:after {
@@ -54,21 +54,21 @@
 	height: 100%;
     display: flex;
     flex-direction: column;
-}
 
-.grain:after {
-	position: absolute;
-	content: '';
-	width: 110%;
-	height: 110%;
-	top: -5%;
-	left: -5%;
-	opacity: .25;
-	background-image: 
-		repeating-conic-gradient(var(--black) 0%, transparent .00003%, transparent .0005%, transparent .00095%),
-		repeating-conic-gradient(var(--black) 0%, transparent .00005%, transparent 0.00015%, transparent 0.0009%);
-	animation: grain 0.5s steps(1) infinite;
-	filter: drop-shadow(0px 0px 1px black);
+	&:after {
+		position: absolute;
+		content: '';
+		width: 110%;
+		height: 110%;
+		top: -5%;
+		left: -5%;
+		opacity: .25;
+		background-image: 
+			repeating-conic-gradient(var(--black) 0%, transparent .00003%, transparent .0005%, transparent .00095%),
+			repeating-conic-gradient(var(--black) 0%, transparent .00005%, transparent 0.00015%, transparent 0.0009%);
+		animation: grain 0.5s steps(1) infinite;
+		filter: drop-shadow(0px 0px 1px black);
+	}
 }
 
 @keyframes grain {
