--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -31,7 +31,6 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   filter: sepia(0.75);
 }
-
 .content:after {
   position: absolute;
   content: "";
@@ -41,15 +40,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .film, .effect {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   filter: blur(0.45px) drop-shadow(0px 0px 0px rgba(255, 255, 255, 0.0666666667));
 }
-
 .film:after, .effect:after {
   position: absolute;
   content: "";
-  width: 120%;
+  width: 100vw;
   height: 100%;
   top: 0;
   left: 0;
@@ -73,7 +71,6 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
 }
-
 .grain:after {
   position: absolute;
   content: "";
@@ -329,10 +326,33 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
   border-bottom: 2px solid black;
 }
+.header__bottom p {
+  width: 170px;
+}
+.header__bottom-date {
+  text-align: end;
+}
 
 .intro {
   padding: 20px 40px;
   line-height: 25px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+.intro__photo {
+  background: rgb(255, 249, 218);
+  padding: 20px 20px 40px 20px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  transform: rotate(2deg);
+}
+.intro__photo img {
+  width: 100%;
+  min-width: 320px;
+  max-width: 450px;
+  filter: sepia(0.8);
 }
 
 .redacted span {
@@ -354,6 +374,21 @@ h1, h2, h3, h4, h5, h6 {
   display: none;
 }
 
+@media screen and (max-width: 1024px) {
+  .intro {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 540px) {
+  .intro {
+    flex-direction: column-reverse;
+  }
+  .intro__photo img {
+    width: 100%;
+    min-width: 100%;
+  }
+}
 .previousWork {
   padding: 20px 40px;
 }
@@ -399,7 +434,7 @@ h1, h2, h3, h4, h5, h6 {
   color: inherit;
   cursor: pointer;
   width: calc(25% - 2rem);
-  min-width: 250px;
+  min-width: 320px;
   height: 400px;
   min-height: 450px;
   perspective: 1000px;
@@ -440,6 +475,7 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   display: flex;
   align-items: flex-end;
+  filter: sepia(0.5);
 }
 .front:before {
   position: absolute;
@@ -450,7 +486,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   bottom: 0;
   background: linear-gradient(135deg, black, hsl(0deg, 0%, 0%));
-  opacity: 0.25;
+  opacity: 0.35;
   z-index: -1;
 }
 .card:hover .front {
@@ -464,8 +500,12 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   transform: rotateY(-180deg);
   padding: 0 2em;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+  filter: sepia(0.5);
 }
 .back .button {
   background: linear-gradient(135deg, black, hsl(0deg, 0%, 0%));
@@ -490,7 +530,80 @@ h1, h2, h3, h4, h5, h6 {
 .card:nth-child(even):hover .back {
   transform: rotateY(0deg);
 }
+.back a {
+  margin: 20px;
+  background: black;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
 
 .wheretofind {
   padding: 20px 40px;
+}
+
+audio {
+  display: inline-block;
+  width: 150px;
+  overflow-x: visible;
+}
+
+audio::-webkit-media-controls-enclosure {
+  background: none;
+}
+
+audio::-webkit-media-controls-current-time-display {
+  display: none;
+}
+
+audio::-webkit-media-controls-time-remaining-display {
+  display: none;
+}
+
+audio::-webkit-media-controls-timeline {
+  display: none;
+}
+
+.stamp {
+  transform: rotate(12deg);
+  color: #555;
+  font-size: 3rem;
+  font-weight: 700;
+  border: 0.25rem solid #555;
+  display: inline-block;
+  position: absolute;
+  width: 300px;
+  padding: 0.25rem 1rem;
+  text-transform: uppercase;
+  border-radius: 1rem;
+  font-family: "Courier";
+  -webkit-mask-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png");
+  -webkit-mask-size: 944px 604px;
+  mix-blend-mode: multiply;
+}
+
+.is-nope {
+  color: #D23;
+  border: 0.5rem double #D23;
+  transform: rotate(3deg);
+  -webkit-mask-position: 2rem 3rem;
+  font-size: 2rem;
+}
+
+.is-approved {
+  color: #0A9928;
+  border: 0.5rem solid #0A9928;
+  -webkit-mask-position: 13rem 6rem;
+  transform: rotate(-14deg);
+  border-radius: 0;
+}
+
+.is-draft {
+  color: #C4C4C4;
+  border: 1rem double #C4C4C4;
+  transform: rotate(-5deg);
+  font-size: 6rem;
+  font-family: "Open sans", Helvetica, Arial, sans-serif;
+  border-radius: 0;
+  padding: 0.5rem;
 }/*# sourceMappingURL=index.css.map */
