add wheretofind section

--- a/src/assets/css/components/_stamps.scss
+++ b/src/assets/css/components/_stamps.scss
@@ -6,7 +6,7 @@
     border: 0.25rem solid #555;
     display: inline-block;
     position: absolute;
-    width: 300px;
+    width: fit-content;
     padding: 0.25rem 1rem;
     text-transform: uppercase;
     border-radius: 1rem;
