--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -572,7 +572,9 @@ audio::-webkit-media-controls-timeline {
   border: 0.25rem solid #555;
   display: inline-block;
   position: absolute;
-  width: 300px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   padding: 0.25rem 1rem;
   text-transform: uppercase;
   border-radius: 1rem;
@@ -606,4 +608,111 @@ audio::-webkit-media-controls-timeline {
   font-family: "Open sans", Helvetica, Arial, sans-serif;
   border-radius: 0;
   padding: 0.5rem;
+}
+
+#content {
+  width: 100%;
+  min-height: 570px;
+}
+
+.tab-container {
+  position: relative;
+  margin: 20px auto;
+}
+
+ul.tabs {
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+ul.tabs button {
+  display: inline-block;
+  background: rgb(234, 219, 173);
+  color: black;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 5px 25px 5px 15px;
+  -webkit-clip-path: polygon(100% 0, 90% 0, 100% 100%, 0 100%, 0.5% 0);
+  clip-path: polygon(100% 0, 90% 0, 100% 100%, 0 100%, 0.5% 0);
+}
+
+.tab-content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.hide {
+  display: none;
+}
+
+.tab-content > div {
+  padding: 10px;
+  text-align: left;
+  min-height: 200px;
+  background: rgb(255, 233, 162);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+ul.tabs button.active {
+  background: rgb(255, 233, 162);
+  color: black;
+}
+
+.instafolder {
+  margin: 20px 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.instafolder a {
+  margin: 20px;
+  background: black;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .instafolder {
+    margin-top: 180px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+.emailform {
+  display: flex;
+  flex-direction: column;
+}
+.emailform__input {
+  background: none;
+  border-bottom: 1px solid black;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  margin-bottom: 20px;
+}
+.emailform__textarea {
+  background: none;
+  border-bottom: 1px solid black;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  margin-bottom: 20px;
+  height: 100px;
+}
+.emailform__send {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 10px;
+  background: black;
+  color: white;
+  align-self: center;
 }/*# sourceMappingURL=index.css.map */
