--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -21,3 +21,6 @@ h1, h2, h3, h4, h5, h6 {
 @import "components/wheretofind";
 @import "components/audioplayer";
 @import "components/stamps";
+@import "components/folders";
+@import "components/instafolder";
+@import "components/emailform";
